{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 63,
  "lineage": "a1847a14-7378-07d9-ff93-8425905eb07f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0915e09cc7ceee3ab",
            "arn": "arn:aws:ec2:us-east-1:837966131658:instance/i-01da7d2ffa14e75f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01da7d2ffa14e75f2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JANUARY-2020-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de8a496acd7ba71f",
            "private_dns": "ip-10-3-1-150.ec2.internal",
            "private_ip": "10.3.1.150",
            "public_dns": "ec2-3-80-127-22.compute-1.amazonaws.com",
            "public_ip": "3.80.127.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-038bd470891e814b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0199a47d887db017a",
            "tags": {
              "Env": "dev",
              "Name": "Server-dev-1",
              "Owner": "sudheer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dfdb6cf35aed9267"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0915e09cc7ceee3ab",
            "arn": "arn:aws:ec2:us-east-1:837966131658:instance/i-06b84af8c009bdbf0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b84af8c009bdbf0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JANUARY-2020-KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aaf24f4fd9af873f",
            "private_dns": "ip-10-3-2-20.ec2.internal",
            "private_ip": "10.3.2.20",
            "public_dns": "ec2-35-173-254-92.compute-1.amazonaws.com",
            "public_ip": "35.173.254.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dcd1afd9418b191b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abd118b33994b02d",
            "tags": {
              "Env": "dev",
              "Name": "Server-dev-2",
              "Owner": "sudheer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dfdb6cf35aed9267"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bd295fb6e89df0f0",
            "owner_id": "837966131658",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0b2edee0de8ae09b5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cc6816e9aaa55140",
            "owner_id": "837966131658",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd295fb6e89df0f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-dev"
            },
            "vpc_id": "vpc-0b2edee0de8ae09b5"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bae4c65d3ae91090",
            "route_table_id": "rtb-0cc6816e9aaa55140",
            "subnet_id": "subnet-0199a47d887db017a"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033088faa9d8c9ee4",
            "route_table_id": "rtb-0cc6816e9aaa55140",
            "subnet_id": "subnet-0abd118b33994b02d"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837966131658:security-group/sg-0dfdb6cf35aed9267",
            "description": "Allow all inbound traffic",
            "egress": [],
            "id": "sg-0dfdb6cf35aed9267",
            "ingress": [],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "837966131658",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b2edee0de8ae09b5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837966131658:subnet/subnet-0199a47d887db017a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.1.0/24",
            "id": "subnet-0199a47d887db017a",
            "map_public_ip_on_launch": false,
            "owner_id": "837966131658",
            "tags": {
              "Name": "Dev-subnet-1"
            },
            "vpc_id": "vpc-0b2edee0de8ae09b5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837966131658:subnet/subnet-0abd118b33994b02d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.3.2.0/24",
            "id": "subnet-0abd118b33994b02d",
            "map_public_ip_on_launch": false,
            "owner_id": "837966131658",
            "tags": {
              "Name": "Dev-subnet-2"
            },
            "vpc_id": "vpc-0b2edee0de8ae09b5"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:837966131658:vpc/vpc-0b2edee0de8ae09b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0586c6e9998e2f406",
            "default_route_table_id": "rtb-0051283dc434568fe",
            "default_security_group_id": "sg-061c62db3eff34c1d",
            "dhcp_options_id": "dopt-4bf33031",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b2edee0de8ae09b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0051283dc434568fe",
            "owner_id": "837966131658",
            "tags": {
              "Name": "terraform-aws-dev"
            }
          }
        }
      ]
    }
  ]
}